# shmoo

./: Cargo.toml  Dockerfile
benches/: ping_pong.rs  queue.rs
examples/ping_pong/: ping.rs  pong.rs  shmbuf.rs
examples/queue/: msg_queue.rs  ping.rs  pong.rs
examples/shm_open/: bounce.rs  send.rs
examples/shmbuf/: lib.rs
shm-derive/: Cargo.toml
shm-derive/src/: lib.rs
src/: error.rs  lib.rs  mapped_file.rs  mmap.rs  mmap_raw.rs  msg_queue.rs  shm.rs  sync.rs
