[package]
name = "shmoo"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["mman", "fs"] }
shm-derive = { path = "shm-derive" }

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "bounce"
path = "examples/shm_open/bounce.rs"

[[example]]
name = "send"
path = "examples/shm_open/send.rs"

[[example]]
name = "ping_pong"
path = "examples/ping_pong/pong.rs"

# Don't run directly, it's invoked by ping_pong.
[[example]]
name = "ping"
path = "examples/ping_pong/ping.rs"

[[example]]
name = "queue"
path = "examples/queue/pong.rs"

# Don't run directly, it's invoked by queue.
[[example]]
name = "queue_ping"
path = "examples/queue/ping.rs"

[[bench]]
name = "ping_pong"
harness = false

[[bench]]
name = "queue"
harness = false

